--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,8 @@
 main:
   - title: "Malware"
     url: http://yeeyeeyeeee.github.io/malware/
+  - title: "Reverse"
+    url: http://yeeyeeyeeee.github.io/reverse/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
